objects/Sales_District__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Zone_Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Zone Identifier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sales_Zone__c.SubDivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.SubDivision__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Zone__c</referenceTo>
        <relationshipLabel>Sales Districts</relationshipLabel>
        <relationshipName>Sales_Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubDivision__c</fullName>
        <label>SubDivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone_Subdivision__c</fullName>
        <label>Zone-Subdivision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sales District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>